# Planszowker

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake.yml
libs/Games/States/: GameChoosingState.cpp
libs/GamesDesigner/: CMakeLists.txt  GamesDesigner.cpp
libs/GamesDesigner/headers/GamesDesigner/: GamesDesigner.h
libs/Supervisor/: Lobby.cpp  Supervisor.cpp
libs/Supervisor/headers/Supervisor/: Supervisor.h
libs/Utils/PlametaParser/: CMakeLists.txt  Entry.cpp  Parser.cpp
libs/Utils/PlametaParser/headers/PlametaParser/: Entry.h
planszowker_designer/: CMakeLists.txt  main.cpp
planszowker_server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/libs/Utils/PlametaParser/: CMakeLists.txt  ParserTest.cpp
tests/libs/Utils/TickThread/: CMakeLists.txt
tests/mocks/Utils/AssetsManager/: AssetsReceiverMock.h  CMakeLists.txt
